--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ billiard==3.6.3.0
 black==19.10b0
 celery==4.4.2
 click==7.1.2
+dj-database-url==0.5.0
 Django==3.0.6
+django-heroku==0.3.1
 djangorestframework==3.11.0
 environs==7.4.0
 flake8==3.8.1
+gunicorn==20.0.4
 importlib-metadata==1.6.0
 kombu==4.6.8
 marshmallow==3.6.0
@@ -25,4 +28,5 @@ sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
 vine==1.3.0
+whitenoise==5.0.1
 zipp==3.1.0
